CVSL-1030 match response content being sent back from licence caseload endpoint